<resources>
    <string name="app_name">FamilyMapServer</string>
    <string name="server_host_text">Server Host: </string>
    <string name="server_port_text">Server Port: </string>
    <string name="user_name_text">User Name: </string>
    <string name="password_text">Password: </string>
    <string name="first_name_text">First Name: </string>
    <string name="last_name_text">Last Name: </string>
    <string name="email_text">Email: </string>
    <string name="radio_male">Male: </string>
    <string name="radio_female">Female: </string>
    <string name="sign_in_button">SIGN IN: </string>
    <string name="register_button">REGISTER: </string>
    <string name="radio_name">Gender: </string>
    <string name="login_fail_toast">Login Failed</string>
    <string name="registration_fail_toast">Registration Failed</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="text_collapsed">Collapsed</string>
    <string name="text_exstended">Exstended</string>
    <string name="text_Life_Events">LIFE EVENTS</string>
    <string name="text_Family">FAMILY</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_back">Back</string>

    <string-array name="line_color_choices">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="map_type_choices">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
