<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Fragments.LoginFragment">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginLeft="15dp">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/server_host_text" />
            <EditText
                android:id="@+id/server_host_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:text="192.168.50.143"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/server_port_text"/>
            <EditText
                android:id="@+id/server_port_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:text="8080"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/user_name_text" />
            <EditText
                android:id="@+id/user_name_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/password_text" />
            <EditText
                android:id="@+id/password_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPassword" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/first_name_text" />
            <EditText
                android:id="@+id/first_name_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/last_name_text" />
            <EditText
                android:id="@+id/last_name_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="10dip"
                android:text="@string/email_text" />
            <EditText
                android:id="@+id/email_input"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text" />
        </TableRow>
            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="27dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="10dip"
                    android:text="@string/radio_name" />

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />

            </RadioGroup>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_in_button"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_button"/>
    </LinearLayout>

</LinearLayout>
